# dynamics

./: CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: build.yml
src/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  vector.h  world.cpp  world.h
src/forces/: force.cpp  force.h  gravity.cpp  gravity.h
src/graphic/: camera.cpp  camera.h  engine.cpp  engine.h
src/math/: vector.cpp  vector.h
src/objects/: object.cpp  object.h  sphere.cpp  sphere.h
